<resources>
    <string name="app_name">ActividadAprendizaje1</string>
    <string name="title_activity_fhjhjghjkjk">fhjhjghjkjk</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="introduzca_contrase_a">Introduzca contraseña:</string>
    <string name="password">Password</string>
    <string name="acceder">Acceder</string>
    <string name="borrar">Borrar</string>
    <string name="factura">Factura</string>
    <string name="nombre3">Nombre</string>
    <string name="nombre2">Nombre</string>
    <string name="direcci_n">Dirección:</string>
    <string name="direcci_n2">Dirección:</string>
    <string name="fecha">Fecha:</string>
    <string name="fecha2">Fecha</string>
    <string name="cliente">Cliente:</string>
    <string name="vehiculo">Vehiculo:</string>
    <string name="nueva_factura">Nueva factura</string>
    <string name="zona_usuarios">Zona usuarios</string>
    <string name="zona_vehiculos">Zona vehiculos</string>
    <string name="cargando_informacion">Cargando informacion...</string>
    <string name="busqueda2">Busqueda</string>
    <string name="activar_busqueda2">Activar busqueda</string>
    <string name="por_apellido2">Por apellido</string>
    <string name="por_id_cliente">Por ID_Cliente</string>
    <string name="apellido2">Apellido</string>
    <string name="idcliente">idCliente</string>
    <string name="listado_de_clientes">Listado de clientes</string>
    <string name="busqueda3">Busqueda</string>
    <string name="activar_busqueda3">Activar busqueda</string>
    <string name="por_apellido">Por apellido</string>
    <string name="por_id_trabajador">Por Id_Trabajador</string>
    <string name="apellido3">Apellido</string>
    <string name="id_trabajador">Id_Trabajador</string>
    <string name="listado_de_trabajadores">Listado de trabajadores</string>
    <string name="busqueda">Busqueda</string>
    <string name="activar_busqueda">Activar busqueda</string>
    <string name="matricula2">Matricula</string>
    <string name="listado_de_vehiculos">Listado de vehiculos</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="matricula">Matricula</string>
    <string name="trabajador_al_cargo">Trabajador al cargo</string>
    <string name="descripcion_de_la_averia">Descripcion de la averia</string>
    <string name="seleccionar_cliente">Seleccionar cliente</string>
    <string name="a_adir2">Añadir</string>
    <string name="cancelar3">cancelar</string>
    <string name="nombre4">Nombre</string>
    <string name="apellido4">Apellido</string>
    <string name="dni3">DNI</string>
    <string name="telefono3">Telefono</string>
    <string name="email3">Email</string>
    <string name="a_adir4">Añadir</string>
    <string name="cancelar2">Cancelar</string>
    <string name="nombre5">Nombre</string>
    <string name="apellido5">Apellido</string>
    <string name="dni5">DNI</string>
    <string name="telefono4">Telefono</string>
    <string name="email4">Email</string>
    <string name="departamento2">Departamento</string>
    <string name="puesto2">Puesto</string>
    <string name="a_adir">Añadir</string>
    <string name="cancelar">cancelar</string>
    <string name="empresas">Empresas</string>
    <string name="particulares">Particulares</string>
    <string name="todos">Todos</string>
    <string name="limpiar">Limpiar</string>
    <string name="clientes">CLIENTES</string>
    <string name="nuevo2">Nuevo</string>
    <string name="listado3">Listado</string>
    <string name="trabajadores">TRABAJADORES</string>
    <string name="nuevo3">Nuevo</string>
    <string name="listado2">LISTADO</string>
    <string name="vehiculos">VEHICULOS</string>
    <string name="nuevo">Nuevo</string>
    <string name="listado">Listado</string>
    <string name="nombre6">Nombre</string>
    <string name="apellido6">Apellido</string>
    <string name="dni6">DNI</string>
    <string name="telefono5">Telefono</string>
    <string name="email5">Email</string>
    <string name="guardar_cambios2">Guardar cambios</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="departamento">Departamento</string>
    <string name="puesto">Puesto</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="item1">Item</string>
    <string name="home">home</string>
    <string name="item2">Item</string>
    <string name="item">Item</string>
    <string name="informacion">Informacion</string>
    <string name="borrar2">Borrar</string>
    <string name="editar2">Editar</string>
    <string name="llamar">Llamar</string>
    <string name="notificar">Notificar</string>
    <string name="terminar_eliminar">Terminar / Eliminar</string>
    <string name="editar">Editar</string>
    <string name="factura1">Es obligaorio rellenar todos los campos</string>
    <string name="factura2">Factura creada</string>
    <string name="factura3">No se ha podido crear la factura, intentelo de nuevo...</string>
    <string name="contraseña_incorrecta">\"Contraseña incorrecta \"</string>
    <string name="particular1">Taller particular 1</string>
    <string name="particular11">Recambios para particulares</string>
    <string name="particular2">Taller particular 2</string>
    <string name="particular22">Recambios para particulares</string>
    <string name="empresas1">Taller empresas 1</string>
    <string name="empresas11">Recambios para uso profesional</string>
    <string name="empresas2">Taller empresas 2</string>
    <string name="empresas22">Recambios para uso profesional</string>
    <string name="particular111">Taller particular 1</string>
    <string name="particular1111">Recambios para particulares</string>
    <string name="particular222">Taller particular 2</string>
    <string name="particular2222">Recambios para particulares</string>
    <string name="empresas111">Taller empresas 1</string>
    <string name="empresas1111">Recambios para uso profesional</string>
    <string name="empresas222">Taller empresas 2</string>
    <string name="empresas2222">Recambios para uso profesional</string>
    <string name="global1">Taller global 1</string>
    <string name="global11">Recambios para todo tipo de vehiculos</string>
    <string name="global2">Taller global 2</string>
    <string name="global22">Recambios para todo tipo de vehiculos</string>
    <string name="desplazado">"Se ha desplazado 1%d metros"</string>
    <string name="info">Informarción</string>
    <string name="info2">Informarción</string>
    <string name="usurioNoEncontrado">Usuario no encontrado</string>
    <string name="importante">Importante</string>
    <string name="preguntaEliminarMensaje">¿ Estas seguro de eliminar este cliente ?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar4">Cancelar</string>
    <string name="fallo">Algo ha fallado, intentelo de nuevo</string>
    <string name="error">Error</string>
    <string name="algoHaSalidoMal">Algo ha salido mal...</string>
    <string name="preguntaEliminar">¿ Estas seguro de eliminar este trabajador ?</string>
    <string name="obligatorioRellenar">Es obligaorio rellenar todos los campos</string>
    <string name="clienteRegistradoCorrectamente">Cliente registrado correctamente</string>
    <string name="trabajadorRegistradoCorrectamente">Trabajador registrado correctamente</string>
    <string name="vehiculoNoEncontrado">Vehiculo no encontrado</string>
    <string name="atencion">Atención</string>
    <string name="preguntaEliminarVehiculo">¿Estas seguro de eliminar este vehiculo?</string>
    <string name="si">Si</string>
    <string name="cancelar5">Cancelar</string>
    <string name="vehiculoRegistradoCorrectamente">Vehiculo registrado correctamente</string>
    <string name="title_activity_preferencias">preferenciasActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hacer_foto">Hacer foto...</string>
</resources>