<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vehiculos.nuevaEntradaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#A4E1A7"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/fotoVehiculo"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            tools:srcCompat="@drawable/coche_ecologico" />

        <Button
            android:id="@+id/hacerFotoVehiculo"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:backgroundTint="#B4D8B6"
            android:text="@string/hacer_foto"
            android:textColor="#020202" />

        <EditText
            android:id="@+id/marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/marca"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/modelo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/matricula"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/matricula"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/trabajador_al_cargo"
            android:textAlignment="center"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spTrabajadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/averia"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/descripcion_de_la_averia"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/seleccionar_cliente"
            android:textAlignment="center"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#67DBE6"
                android:onClick="añadirEntrada"
                android:text="@string/a_adir"
                android:textColor="#000000"
                android:translationX="-10dp"
                app:icon="@android:drawable/ic_input_add" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F37D7D"
                android:onClick="cancelarEntrada"
                android:text="@string/cancelar"
                android:textColor="#000000"
                android:translationX="10dp"
                app:icon="@android:drawable/ic_menu_delete" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>