<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuarios.nuevoClienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/nombreCliente"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/apellidoCliente"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/dniCliente"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/dni"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/telefonoCliente"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/emailCliente"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#67DBE6"
                android:onClick="añadirCliente"
                android:text="@string/a_adir"
                android:textColor="#000000"
                android:translationX="-10dp"
                app:icon="@android:drawable/ic_input_add" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F37D7D"
                android:onClick="cancelarCliente"
                android:text="@string/cancelar2"
                android:textColor="#000000"
                android:translationX="10dp"
                app:icon="@android:drawable/ic_menu_delete" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>