<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F4C3"
        android:baselineAligned="false"
        android:gravity="center"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:padding="45dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/introduzca_contrase_a"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textColor="#000000" />

        <Button
            android:id="@+id/okPasswordUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="#67DBE6"
            android:onClick="acceso"
            android:text="@string/acceder"
            android:textColor="#000000"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_send" />

        <Button
            android:id="@+id/cancelPasswordUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="#F37D7D"
            android:onClick="cancelar"
            android:text="@string/borrar"
            android:textColor="#000000"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>